prusti-tests/tests/verify_overflow/ui/core_proof/unions.stderr
error: [Prusti: unsupported feature] failed to obtain the required capability because a conflicting capability is present
  --> $DIR/unions.rs:13:23
   |
13 |     let _y = unsafe { a.f2 };
   |                       ^^^^
   |
   = help: try manually packaging the union capability
   = note: this typically happens when trying to read from different union fields because Prusti does not yet support reinterpreting memory
note: the conflicting capability
  --> $DIR/unions.rs:12:23
   |
12 |     let _x = unsafe { a.f1 };
   |                       ^^^^

error: aborting due to previous error

